--- a/.github/workflows/master_pfw-kata-demo.yml
+++ b/.github/workflows/master_pfw-kata-demo.yml
@@ -28,13 +28,13 @@ jobs:
           npm run test --if-present
 
       - name: Archive artifact for deployment
-        run: tar -cfz release.tar.gz . --exclude=release.tar.gz
+        run: tar -czf release.tar.gz --exclude=release.tar.gz .
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: ./release.zip
+          path: ./release.tar.gz
 
   deploy:
     runs-on: ubuntu-latest
