--- a/.github/workflows/master_pfw-kata-demo.yml
+++ b/.github/workflows/master_pfw-kata-demo.yml
@@ -27,14 +27,14 @@ jobs:
           npm run build --if-present
           npm run test --if-present
 
-      - name: Archive artifact for deployment
-        run: tar -czf ../release.tar.gz .
+      - name: Zip artifact for deployment
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: node-app
-          path: ../release.tar.gz
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -56,4 +56,4 @@ jobs:
           app-name: 'pfw-kata-demo'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_22965C0AC9B14B87A6CA507062338F48 }}
-          package: release.tar.gz
+          package: release.zip
