--- a/.github/workflows/master_pfw-kata-demo.yml
+++ b/.github/workflows/master_pfw-kata-demo.yml
@@ -24,11 +24,11 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build 
+          npm run test 
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./build/* -r
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
